# pdaj-predavanja-beleske

./: .gitignore  LICENSE.rst  pred-01.rst  pred-02.rst  pred-03.rst  pred-04.rst  pred-05.rst  pred-06.rst  pred-07.rst  pred-08.rst  pred-09.rst  pred-10.rst
materijali/pred-02/finder_seeker/: generators.py
materijali/pred-02/monte_pi/: benchmark.sh  monte_pi_v1.py  monte_pi_v2.py
materijali/pred-03/poetry_projekat/: README.rst  pyproject.toml
materijali/pred-03/poetry_projekat/compute/: serializers.py  urls.py  views.py
materijali/pred-03/poetry_projekat/pdaj/: settings.py  urls.py
materijali/pred-03/virtualenv_projekat/: README.rst  manage.py  requirements.txt
materijali/pred-03/virtualenv_projekat/pdaj/: settings.py  urls.py  wsgi.py
materijali/pred-04/poetry_projekat/: README.rst  pyproject.toml
materijali/pred-04/poetry_projekat/compute/: serializers.py  urls.py  views.py
materijali/pred-04/poetry_projekat/pdaj/: asgi.py  settings.py  urls.py
materijali/pred-05/prosti-brojevi/: par_v2.py
materijali/pred-06/prosti-brojevi/: benchmark.sh  imap_un_v1.py  imap_un_v2.py  imap_un_v3.py  imap_un_v4.py  imap_un_v5.py  imap_v1.py  imap_v2.py  imap_v3.py  imap_v4.py  imap_v5.py  map_v1.py  map_v3.py  map_v4.py  seq_memo.py  sequential.py
materijali/pred-07/: pyproject.toml  visualize.py  visualize_all.sh
materijali/pred-10/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
materijali/pred-10/distributed/: app.py  core.py  settings.py  tasks.py
